UI tweaks: Minor alignment correction for when Uber bar was open.

--- a/client_mods/com.pa.n30n.ui_tweaks/ui/mods/ui_tweaks/hide_control_group_bar.css
+++ b/client_mods/com.pa.n30n.ui_tweaks/ui/mods/ui_tweaks/hide_control_group_bar.css
@@ -15,3 +15,7 @@
 .bottom_show_unit_group_controls {
 	bottom: 0px !important;
 }
+
+.bottom_show_uberbar {
+	margin-bottom: 35px !important;
+}
